# Rust_SurrealDB_project

./: README.md
001_save_db/: README.md
001_save_db/001_rocksdb/: README.md
001_save_db/001_rocksdb/a01_savedb_rocksdb/: .gitignore  Cargo.toml  README.md
001_save_db/002_tikv-client/: README.md
001_save_db/002_tikv-client/a01_savedb_tikv_client/: Cargo.toml  README.md
001_save_db/002_tikv-client/b01_tikv_client_basic/: Cargo.toml  README.md
99_Small_Project/: README.md
99_Small_Project/001_csv_to_surrealdb_rocksdb/: README.md
99_Small_Project/001_csv_to_surrealdb_rocksdb/a01_csv_savedb_rocksdb/: .gitignore  Cargo.toml  README.md
99_Small_Project/001_csv_to_surrealdb_rocksdb/a02_csv_savedb_rocksdb_surrealdb/: .gitignore  Cargo.toml  README.md
99_Small_Project/001_csv_to_surrealdb_rocksdb/a02_csv_savedb_rocksdb_surrealdb/src/: migrate_to_native.rs
99_Small_Project/002_csv_training/: README.md
99_Small_Project/002_csv_training/a01_csv/: Cargo.toml
99_Small_Project/actix-app01/: Cargo.toml  README.md  package-lock.json  tailwind.config.js
99_Small_Project/actix-app01/src/: app.rs
tutorials/: README.md
tutorials/001_surrealdb_tutorial/: README.md
tutorials/001_surrealdb_tutorial/a01_quick_tutorial/: Cargo.toml  surrealism.toml
tutorials/002_Surreal_db_files/: README.md  graph_queries.surli  surrealql_basics.surql  vector_queries.surli
tutorials/003_SurrealDB_SQL_training/: MEMORY.md  README.md  SURREALDB.md
tutorials/01_embedding/: README.md
tutorials/02_memory_db/: README.md
tutorials/02_memory_db/a01_mem_db/: .gitignore  Cargo.toml  (+1 more)
(+18 files in other folders)
